--- a/iOS/serverfarm/Base.lproj/Main.storyboard
+++ b/iOS/serverfarm/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="qHo-PQ-oUi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="qHo-PQ-oUi">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -15,7 +15,11 @@
         <!--Server Farm View Controller-->
         <scene sceneID="3AR-ne-uYN">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="C2O-6u-DUl" customClass="ServerFarmViewController" customModule="serverfarm" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="C2O-6u-DUl" customClass="ServerFarmViewController" customModule="serverfarm" customModuleProvider="target" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="qHo-PQ-oUi" kind="show" identifier="ProgressView" id="uhk-1v-xXI"/>
+                    </connections>
+                </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1pg-SX-cvk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="551" y="-336"/>
@@ -969,14 +973,26 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="DOB-ac-pAI">
                                 <rect key="frame" x="142" y="490" width="37" height="37"/>
                             </activityIndicatorView>
+                            <textField hidden="YES" opaque="NO" clipsSubviews="YES" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Server address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k3K-sg-gmy">
+                                <rect key="frame" x="30" y="493" width="260" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="260" id="Mjz-7f-JRj"/>
+                                </constraints>
+                                <color key="textColor" red="0.75666242837905884" green="0.76077514886856079" blue="0.76482003927230835" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" returnKeyType="done"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="twY-lb-nod" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="LMt-Tx-eJF" secondAttribute="leadingMargin" constant="5" id="49P-ww-PcH"/>
                             <constraint firstItem="uFd-eB-nG1" firstAttribute="width" secondItem="LMt-Tx-eJF" secondAttribute="width" id="9u4-DU-iVS"/>
+                            <constraint firstItem="k3K-sg-gmy" firstAttribute="centerY" secondItem="DOB-ac-pAI" secondAttribute="centerY" id="CQD-4V-PaI"/>
+                            <constraint firstItem="k3K-sg-gmy" firstAttribute="width" secondItem="LMt-Tx-eJF" secondAttribute="width" priority="900" id="GJT-5f-bfx"/>
                             <constraint firstItem="uFd-eB-nG1" firstAttribute="leading" secondItem="LMt-Tx-eJF" secondAttribute="leading" id="KxL-jX-bCc"/>
                             <constraint firstItem="DOB-ac-pAI" firstAttribute="centerX" secondItem="uFd-eB-nG1" secondAttribute="centerX" id="Ocr-a9-ZMS"/>
                             <constraint firstItem="wVz-p2-Jp2" firstAttribute="bottom" secondItem="uFd-eB-nG1" secondAttribute="bottom" id="Ssx-kI-XJ2"/>
+                            <constraint firstItem="k3K-sg-gmy" firstAttribute="centerX" secondItem="LMt-Tx-eJF" secondAttribute="centerX" id="Sx2-LO-Gjz"/>
                             <constraint firstItem="wVz-p2-Jp2" firstAttribute="top" secondItem="LMt-Tx-eJF" secondAttribute="top" id="W0w-S9-vnL"/>
                             <constraint firstItem="twY-lb-nod" firstAttribute="top" relation="greaterThanOrEqual" secondItem="q4n-o8-LGv" secondAttribute="bottom" constant="5" id="aM0-Mk-Ik0"/>
                             <constraint firstItem="twY-lb-nod" firstAttribute="centerY" secondItem="LMt-Tx-eJF" secondAttribute="centerY" multiplier="2:3" id="h4j-d4-QZt"/>
@@ -990,12 +1006,14 @@
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
+                        <outlet property="connectIndicator" destination="DOB-ac-pAI" id="19h-Db-Rs9"/>
+                        <outlet property="serverAddressField" destination="k3K-sg-gmy" id="mEB-cs-m8a"/>
                         <segue destination="C2O-6u-DUl" kind="show" identifier="ServerFarmView" id="Qwp-gE-2Ww"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5vZ-tg-k4S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-443" y="-335"/>
+            <point key="canvasLocation" x="-444.375" y="-335.91549295774649"/>
         </scene>
     </scenes>
     <resources>
